honestamente nao sei oq esta dando de errado pq no debugger ele aparentemente calcula tudo certo, mas o buffer so sabe imprimir -1

--- a/README
+++ b/README
@@ -22,3 +22,5 @@ O ponteiro s4 é salvo apenas após o MaxVal e todos os whitespaces subsequentes
 
 Lab 9:
 Funciona para casos que nao acha indice
+
+Parsing_int aparentemente funcionando
